# auth_service

./: Dockerfile  base_checks.py  code_service.py  config.py  custom_exceptions.py  dependencies.py  deps.py  docker-compose.yml  main.py  pyproject.toml  rate_limit_ids.py  security.py  serve_rpc.py  utils.py
.github/workflows/: build-push-deploy.yml
alembic/: env.py
alembic/versions/: 696542e4230c_add_users_table.py  6ce5cdf56385_init.py  83995a5c4745_init.py  8896d5105979_add_users_table.py  89d0fbb841dc_init.py  93131fc9aeba_update_permissions_table.py  b267f5370b44_add_routing_key_to_notification_table.py  c2af9988bcc7_init.py  d07e72c795f2_init.py  d52216a3ce16_init.py  e4a4804fdcd3_init.py  ec2efb79afef_init.py
auth/: service.py
auth_utils/: kms_sign.py  service.py
core/: initial_permissions_roles_seed.py  logger.py
database/crud/: base.py  login_history.py  permission.py  refresh_token.py  role.py  singin_key.py  user.py  user_role.py  user_session.py  verification_code.py
database/crud/many_to_many/: role_permission.py  user_role.py
database/db/: session.py
database/models/: __init__.py  login_history.py  permission.py  refresh_token.py  role.py  singing_key.py  user.py  user_role.py  user_session.py  verification_code.py
database/models/many_to_many/: role_permission.py  user_role.py
database/schemas/: login_history.py  permission.py  refresh_token.py  role.py  signing_key.py  user.py  user_session.py  verification_code.py
database/schemas/many_to_many/: role_permission.py  user_role.py
dependencies/: security.py
rabbit_service/: service.py
request_schemas/: logout.py  password_reset.py  refresh.py  registration.py
request_schemas/validators/: password.py
routers/: auth.py
routers/v1/: auth.py  password_reset.py  verification_code.py  verify.py
routers/v1/private/: permission.py  role.py  user.py
routers/v1/public/: auth.py  password_reset.py  verification_code.py  verify.py
rpc_server/: auth_rcp.py
schemas/request_schemas/: password_reset.py  registration.py  role.py  token.py  users.py  verification_code.py
schemas/response_schemas/: role.py  users.py
scripts/: init_db.py
scripts/src/: permission.csv  role.csv  role_permissions.csv
services/rpc_server_client/: __init__.py  account.py  auth_rcp.py  health.py
tests/: conftest.py  factories.py  moks.py
tests/factories/: role.py  verefication_token.py
tests/test_factories/: user_factory.py
tests/unit/auth/: test_login.py  (+1 more)
tests/utils/: assertations.py  test_helpers.py
utils/: app_factory.py  decode_user_agent.py  pagination_page.py
(+10 files in other folders)
